--- a/app.json
+++ b/app.json
@@ -1,13 +1,3 @@
 {
-    "env": {
-        "CONFIG_FILE_URL": {
-            "description": "The RAW link of the config.env file",
-            "required": "true"
-        }
-    },
-    "stack": "container",
-    "addons": [{
-            "plan": "heroku-postgresql"
-        }
-    ]
+    "stack": "container"
 }
